<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        style="@style/AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="@dimen/lg_margin_padding"
            android:layout_marginVertical="@dimen/md_margin_padding"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/img_logo_32dp" />

            <androidx.appcompat.widget.SearchView
                style="@style/SearchView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:clickable="true"
                android:focusable="true"
                app:queryHint="Cari Taman Bermain" />

            <ImageButton
                android:id="@+id/btn_to_fav"
                android:layout_width="wrap_content"
                style="@style/Button.Icon.Favorite"
                android:layout_marginStart="@dimen/lg_margin_padding"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_favorite_border_24dp" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/srl_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_destination"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingHorizontal="@dimen/sm_margin_padding" />

            <LinearLayout
                android:id="@+id/ll_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="@dimen/xxl_margin_padding"
                android:visibility="gone">

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/lt_animation"
                    android:layout_width="@dimen/lottie_not_found_size"
                    android:layout_height="@dimen/lottie_not_found_size"
                    android:adjustViewBounds="true"
                    android:scaleType="centerCrop"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"
                    app:lottie_rawRes="@raw/lottie_not_found" />

                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/destination_not_found_desc"
                    android:textAppearance="@style/TextAppearance.JJYuk.TextLG.Medium" />

                <TextView
                    android:id="@+id/tv_error_desc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/sm_margin_padding"
                    android:gravity="center"
                    android:text="@string/destination_not_found_description_desc"
                    android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Regular"
                    android:textColor="@color/neutral_70" />

                <Button
                    android:id="@+id/btn_refresh"
                    style="@style/Button.Text.Refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/xs_margin_padding"
                    android:layout_marginTop="@dimen/xl_margin_padding"
                    android:drawableLeft="@drawable/ic_refresh_24dp"
                    android:text="@string/refresh_button"
                    app:layout_constraintStart_toEndOf="@+id/tv_distance"
                    app:layout_constraintTop_toBottomOf="@+id/tv_address" />

            </LinearLayout>

        </FrameLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>