<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Card.Destination"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_image"
                style="@style/Card.Destination.Video"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_card_destination_height"
                android:contentDescription="@string/destination_card_img_desc"
                app:shapeAppearance="@style/Card.Destination.Video.Corners"
                tools:srcCompat="@tools:sample/avatars" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_marginTop="@dimen/md_margin_padding"
                android:layout_marginEnd="@dimen/md_margin_padding"
                android:src="@drawable/ic_play_circle_filled_24dp" />

            <LinearLayout
                style="@style/Card.Destination.Price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="@style/TextAppearance.JJYuk.TextSM.Medium"
                    android:textColor="@color/neutral_10"
                    tools:text="Rp 20.000" />

                <TextView
                    android:id="@+id/tv_people"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/per_orang"
                    android:textAppearance="@style/TextAppearance.JJYuk.Text2XS.Regular"
                    android:textColor="@color/neutral_40" />

            </LinearLayout>

        </FrameLayout>

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/lg_margin_padding"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@style/TextAppearance.JJYuk.TextBase.Medium"
            app:layout_constraintEnd_toEndOf="@id/frameLayout"
            app:layout_constraintStart_toStartOf="@id/frameLayout"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout"
            tools:text="@tools:sample/lorem" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/md_margin_padding"
            app:layout_constraintStart_toStartOf="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@+id/tv_name"
            app:srcCompat="@drawable/ic_star_16dp"
            app:tint="@color/semantic_warning" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_margin_padding"
            android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            tools:text="4.8" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.JJYuk.Text2XS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating"
            tools:text="@string/jumlah_ulasan" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sm_margin_padding"
            android:layout_marginBottom="@dimen/lg_margin_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:srcCompat="@drawable/ic_pin_drop_12dp"
            app:tint="@color/neutral_70" />

        <TextView
            android:id="@+id/tv_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_margin_padding"
            android:textAppearance="@style/TextAppearance.JJYuk.Text2XS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            tools:text="Ijen" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextView.Status.Success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sm_margin_padding"
            app:layout_constraintBottom_toBottomOf="@+id/tv_place"
            app:layout_constraintStart_toEndOf="@+id/tv_place"
            app:layout_constraintTop_toTopOf="@+id/tv_place"
            tools:text="Buka" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>
