<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_image"
            style="@style/ShapeAppearance.Destination.Detail.Image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_destination_detail_height"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Destination.Detail.Image.Corners"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/lg_margin_padding"
            android:layout_marginTop="@dimen/xxl_margin_padding"
            tools:text="Flora Wisata San Tera"
            android:textAppearance="@style/TextAppearance.JJYuk.Text2XL.Medium"
            app:layout_constraintEnd_toStartOf="@+id/gl_title_price"
            app:layout_constraintStart_toStartOf="@+id/iv_image"
            app:layout_constraintTop_toBottomOf="@+id/iv_image" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_title_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="252dp" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/TextView.Detail.Price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/lg_margin_padding"
            tools:text="Rp 30 ribu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_title" />

        <TextView
            android:id="@+id/tv_price_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_margin_padding"
            android:text="@string/per_orang_description"
            android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="@+id/tv_price"
            app:layout_constraintTop_toBottomOf="@+id/tv_price" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sm_margin_padding"
            app:layout_constraintStart_toStartOf="@+id/tv_title"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            app:srcCompat="@drawable/ic_star_24dp"
            app:tint="@color/semantic_warning" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.JJYuk.TextSM.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            app:layout_constraintStart_toEndOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4"
            tools:text="4.8" />

        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.JJYuk.Text2XS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintStart_toEndOf="@+id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating"
            tools:text="@string/jumlah_ulasan" />

        <View
            android:id="@+id/divider"
            android:layout_width="409dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/xl_margin_padding"
            android:background="@color/neutral_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xl_margin_padding"
            app:layout_constraintStart_toStartOf="@+id/imageView4"
            app:layout_constraintTop_toBottomOf="@+id/divider"
            app:srcCompat="@drawable/ic_circle_pin_drop_40dp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/sm_margin_padding"
            android:textAppearance="@style/TextAppearance.JJYuk.TextSM.Regular"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5"
            tools:text="Dusun Sebaluh, Pandesari, Pujon, Malang." />

        <TextView
            android:id="@+id/tv_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Medium"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="@+id/tv_map"
            app:layout_constraintStart_toStartOf="@+id/tv_address"
            app:layout_constraintTop_toTopOf="@+id/tv_map"
            tools:text="3KM" />

        <Button
            android:id="@+id/tv_map"
            style="@style/Button.Text.Map"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_margin_padding"
            android:text="@string/map_button"
            app:layout_constraintStart_toEndOf="@+id/tv_distance"
            app:layout_constraintTop_toBottomOf="@+id/tv_address" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_margin_padding"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/tv_distance"
            app:srcCompat="@drawable/ic_circle_clock_40dp" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="10AM - 08PM"
            android:textAppearance="@style/TextAppearance.JJYuk.TextSM.Regular"
            app:layout_constraintBottom_toBottomOf="@+id/imageView6"
            app:layout_constraintStart_toStartOf="@+id/tv_distance"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/TextView.Status.Success"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xs_margin_padding"
            app:layout_constraintBottom_toBottomOf="@+id/tv_time"
            app:layout_constraintStart_toEndOf="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@+id/tv_time"
            tools:text="Buka" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/lg_margin_padding"
            app:layout_constraintStart_toStartOf="@+id/imageView6"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/ic_circle_mask_40dp" />

        <TextView
            android:id="@+id/tv_health_safety_protocol_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_health_safety_protocol"
            android:textAppearance="@style/TextAppearance.JJYuk.TextSM.Regular"
            app:layout_constraintStart_toStartOf="@+id/tv_time"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <TextView
            android:id="@+id/tv_health_safety_protocol"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_margin_padding"
            android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Medium"
            android:textColor="@color/neutral_70"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="@+id/tv_health_safety_protocol_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/tv_health_safety_protocol_placeholder"
            tools:text="Pakai Masker, Cek Suhu, Jaga Jarak" />

        <TextView
            android:id="@+id/tv_description_placeholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xl_margin_padding"
            android:text="@string/placeholder_about"
            android:textAppearance="@style/TextAppearance.JJYuk.TextLG.Medium"
            app:layout_constraintStart_toStartOf="@+id/imageView7"
            app:layout_constraintTop_toBottomOf="@+id/tv_health_safety_protocol" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/xs_margin_padding"
            android:layout_marginBottom="@dimen/xxl_margin_padding"
            android:textAppearance="@style/TextAppearance.JJYuk.TextXS.Regular"
            android:textColor="@color/neutral_70"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_price"
            app:layout_constraintStart_toStartOf="@+id/tv_description_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/tv_description_placeholder"
            tools:text="@tools:sample/lorem/random" />

        <ImageView
            android:id="@+id/iv_fg_video"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_image"
            app:layout_constraintTop_toTopOf="@+id/iv_image"
            app:srcCompat="@drawable/fg_video_item" />

        <ImageView
            android:id="@+id/iv_play_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/iv_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/iv_image"
            app:layout_constraintTop_toTopOf="@+id/iv_image"
            app:srcCompat="@drawable/ic_play_circle_filled_48dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:contentInsetStartWithNavigation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_arrow_back_24dp"
            android:background="@drawable/bg_appbar_gradient"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
